--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -48,7 +48,7 @@
 	text-align: right;
 	float: right;
 	padding-top: 9px;
-	font-size: 85%;
+	font-size: 100%;
 	letter-spacing: 1px;
 	line-height: 1em;
 	font-weight: 600;
@@ -56,7 +56,7 @@
 	padding: 0;
 	list-style-type: none;
 	text-transform: uppercase;
-		font-family: 'Space Mono', serif;
+		font-family: 'Montserrat', serif;
 
 }
 
