--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -22,7 +22,7 @@
     margin-bottom: 0;
     float: left;
     font-weight: 500;
-		font-family: 'Raleway', sans-serif;
+		font-family: 'PT Sans', sans-serif;
     color: #ffffff;
     &,
     &:visited {
@@ -56,7 +56,7 @@
 	padding: 0;
 	list-style-type: none;
 	text-transform: uppercase;
-		font-family: 'Montserrat', serif;
+		font-family: 'PT Sans', serif;
 
 }
 
