--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -188,7 +188,7 @@ h1 /* .post-title */ {
 /*    font-size: 42px; */
     letter-spacing: -1px;
     line-height: 1;
-		font-family: 'Quicksand', sans-serif;
+		font-family: 'PT Sans', sans-serif;
         font-weight: 600;
 		color: #522d80;
 
@@ -201,7 +201,7 @@ h1 /* .post-title */ {
     margin-bottom: $spacing-unit;
 
     h2 {
-		font-family: 'Raleway', sans-serif;
+		font-family: 'PT Sans', sans-serif;
 	font-weight: 500;
 /*        font-size: 50px; */
 
@@ -243,7 +243,7 @@ ul.listing {
 ul.listing li.listing-seperator {
 	padding-top: 15px;
 	font-weight: bold;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'PT Sans', sans-serif;
 	font-size: 1.17em;
 }
 
@@ -258,6 +258,6 @@ ul.listing li.listing-item time {
 ul.listing li.listing-item a {
 	color: $clemson-purple;
 	font-weight: 500;
-	font-family: 'Raleway', sans-serif;
+	font-family: 'PT Sans', sans-serif;
 }
 
