--- a/css/main.scss
+++ b/css/main.scss
@@ -17,7 +17,7 @@ p.infolinks { margin: 0.3em 0em 0em 0em; padding: 0px; }
 
 
 // Our variables
-$base-font-family: 'Raleway', Helvetica, Arial, sans-serif;
+$base-font-family: 'PT Sans', Helvetica, Arial, sans-serif;
 $base-font-size:   1.0em;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.45;
@@ -26,10 +26,10 @@ $spacing-unit:     30px;
 
 $text-color:       #111;
 $background-color: #fdfdfd;
-$brand-color:      #A31F34;
+$brand-color:      #003057;
 // $gameday-sky: #109dc0;
-$clemson-purple:      #8A8B8C;
-$clemson-orange:      #A31F34;
+$clemson-purple:      #B3A369;
+$clemson-orange:      #003057;
 
 
 $grey-color:       #828282;
